# simple_learning

./: CHANGELOG.rst  CMakeLists.txt  package.xml
launch/: simple_learning_server.launch
scripts/: arm_hand_learn.py  arm_learn.py  learn_server.py  simple_learn.py  test_motion.bag
srv/: Learn.srv
